# CK3-Linter

./: LICENSE.md  README.md  dockerfile  dynasty_test.txt  pyproject.toml
.github/workflows/: docker-publish.yml
CK3_Linter/: __main__.py  __version__.py  cli.py  config.py  utils.py
CK3_Linter/formatters/: __init__.py  base.py  default.py  json.py  severity.py
CK3_Linter/linter/: collection.py  match.py  rule.py  runner.py
CK3_Linter/rules/: FinalNewLine.py  TrailingWhiteSpace.py
